# rusty-qr-scanner

./: .gitmodules  Cargo.toml  Otsu_Boy.tif  README.md
src/: main.rs  otsu.rs  qr_location.rs
src/images/: Building_Original.tif
