[package]
name = "rusty-qr-scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxidized_image_processing = { git = "https://github.com/dariandzirko/oxidized-image-processing" }
image = "0.24.5"
